# Codex2

./: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml  questions.json  quiz.py  requirements.txt
.github/workflows/: ci.yml  python-package.yml
quizapp/: quiz.py
tests/: test_quiz.py
